# gxlib

./: ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  gtest.mk  gxlib.supp  meson.build
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/gxio/: Makefile.am  gxio-docs.xml
docs/reference/gxlib/: Makefile.am  gxlib-docs.xml
gxio/: Makefile.am  gxdirwatcher.c  gxdirwatcher.h  gxio-2.0.pc.in  gxio.h
gxio/tests/: Makefile.am  meson.build  test-gxdirwatcher.c
gxlib/: Makefile.am  gxfunc.c  gxfunc.h  gxlib-2.0.pc.in  gxlib.h  gxlist.c  gxlist.h  gxoption.c  gxoption.h  gxpath.c  gxpath.h  gxpred.c  gxpred.h  gxstr.c  gxstr.h
gxlib/tests/: Makefile.am  meson.build  test-examples.c  test-gxfunc.c  test-gxlist.c  test-gxoption.c  test-gxpath.c  test-gxpred.c  test-gxstr.c
m4/: Makefile.am  ax_valgrind_check.m4
